--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://${eureka.instance.hostname}:${server-gateway.port}/eureka/
+      defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
     fetch-registry: true
     register-with-eureka: true
 
