--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,30 +1,38 @@
-
-spring:
-  application:
-    name: gateway
 server:
-  port: ${PORT:8081}
-  servlet:
-    context-path: /gateway
-
+  port: 8081
 server-gateway:
   port: ${PORT:8080}
-
 eureka:
-  instance:
-    hostname: localhost
-    prefer-ip-address: true
   client:
-    service-url:
+    serviceUrl:
       defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
-    fetch-registry: true
-    register-with-eureka: true
 
-zuul:
-  sensitive-headers: Cookie
-# Apenas assinador para aumentar a seguranca e encryptar o codigo basta retirar o type de todos servicos
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 
-ribbon:
-  ReadTimeout: 10000
-  ConnectTimeout: 10000
+spring:
+  cloud:
+    gateway:
+      discovery:
+        locator:
+          enabled: true
+      routes:
+        - id: auth
+          uri: lb://auth
+          predicates:
+            - Path=/auth/**
+          filters:
+            - RewritePath=/auth/(?<path>.*), /$\{path}
+        - id: openapi
+          uri: http://localhost:${server.port}
+          predicates:
+            - Path=/v3/api-docs/**
+          filters:
+            - RewritePath=/v3/api-docs/(?<path>.*), /$\{path}/v3/api-docs
 
+springdoc:
+  swagger-ui:
+    urls:
+      - name: auth
+        url: /v3/api-docs/auth
