--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
           filters:
             - RewritePath=/auth/(?<path>.*), /$\{path}
         - id: openapi
-          uri: http://localhost:${server.port}
+          uri: https://fast-lake-01538.herokuapp.com
           predicates:
             - Path=/v3/api-docs/**
           filters:
