--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8081
+  port: 8060
 server-gateway:
   port: ${PORT:8080}
 eureka:
   client:
     serviceUrl:
-      defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
+      defaultZone: http://localhost:${server-gateway.port}/eureka/
 
 logging:
   pattern:
@@ -25,7 +25,7 @@ spring:
           filters:
             - RewritePath=/auth/(?<path>.*), /$\{path}
         - id: openapi
-          uri: https://fast-lake-01538.herokuapp.com
+          uri: http://localhost:${server.port}
           predicates:
             - Path=/v3/api-docs/**
           filters:
@@ -36,3 +36,7 @@ springdoc:
     urls:
       - name: auth
         url: /v3/api-docs/auth
+
+ribbon:
+  ReadTimeout: 10000000
+  ConnectTimeout: 10000000
