--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ server-gateway:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:${server-gateway.port}/eureka/
+      defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
 
 logging:
   pattern:
@@ -25,7 +25,7 @@ spring:
           filters:
             - RewritePath=/auth/(?<path>.*), /$\{path}
         - id: openapi
-          uri: http://localhost:${server.port}
+          uri: https://fast-lake-01538.herokuapp.com
           predicates:
             - Path=/v3/api-docs/**
           filters:
