--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ spring:
           enabled: true
       routes:
         - id: auth
-          uri: lb://auth
+          uri: https://api-login-all-it.herokuapp.com/
           predicates:
             - Path=/auth/**
           filters:
