--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,6 +15,8 @@ logging:
 spring:
   cloud:
     gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Origin Access-Control-Allow-Credentials, RETAIN_UNIQUE
       globalcors:
         corsConfigurations:
           '[/**]':
@@ -22,6 +24,8 @@ spring:
             allowedMethods:
               - GET
               - POST
+            allowed-headers: "*"
+            allow-credentials: true
       discovery:
         locator:
           enabled: true
