fix email endpoint

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,7 +51,7 @@ springdoc:
       - name: auth
         url: /v3/api-docs/auth
       - name: email
-        url: /v3/api-docs/auth
+        url: /v3/api-docs/email
 
 ribbon:
   ReadTimeout: 2147483647
