--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
         - id: email
           uri: https://api-email-jj.herokuapp.com/
           predicates:
-            - Path=/email/**
+            - Path=/sendMail/**
           filters:
             #            - EncryptDecryptFilter
             - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
@@ -51,7 +51,7 @@ springdoc:
       - name: auth
         url: /v3/api-docs/auth
       - name: email
-        url: /v3/api-docs/email
+        url: /v3/api-docs/sendMail
 
 ribbon:
   ReadTimeout: 2147483647
