--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ spring:
           enabled: true
       routes:
         - id: auth
-          uri: lb://auth
+          uri: lb://AUTH
           predicates:
             - Path=/auth/**
           filters:
