--- a/pom.xml
+++ b/pom.xml
@@ -12,21 +12,16 @@
     <groupId>base.joao4018</groupId>
     <artifactId>discovery</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>discovery</name>
-    <description>discovery</description>
+    <name>gateway</name>
+    <description>gateway</description>
     <properties>
         <java.version>11</java.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
         <jaxb-runtime.version>2.3.2</jaxb-runtime.version>
         <spring-cloud.version>2020.0.3</spring-cloud.version>
+        <springdoc-openapi-data-rest.version>1.6.9</springdoc-openapi-data-rest.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-parent</artifactId>
-            <version>2.2.7.RELEASE</version>
-            <type>pom</type>
-        </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-gateway</artifactId>
@@ -36,16 +31,6 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-webflux-core</artifactId>
-            <version>1.5.13</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-webflux-ui</artifactId>
-            <version>1.5.13</version>
-        </dependency>
     </dependencies>
 
     <dependencyManagement>
