--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 server:
   port: 8060
-
+server-gateway:
+  port: ${PORT:8080}
 eureka:
-  instance:
-    hostname: localhost
-    prefer-ip-address: true
   client:
     service-url:
       defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
