add dev enviroment

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 server-gateway:
   port: ${PORT:8080}
 eureka:
+  instance:
+    hostname: api-login-all-it.herokuapp.com
   client:
     service-url:
       defaultZone: https://secret-anchorage-03030.herokuapp.com/eureka/
