added filter to router swagger

--- a/pom.xml
+++ b/pom.xml
@@ -33,12 +33,12 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webflux-core</artifactId>
-            <version>1.5.13</version>
+            <version>${springdoc-openapi-data-rest.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-webflux-ui</artifactId>
-            <version>1.5.13</version>
+            <version>${springdoc-openapi-data-rest.version}</version>
         </dependency>
     </dependencies>
 
